;;;; -*- coding: utf-8; -*-
changes in sbcl-0.9.18 (1.0.beta?) relative to sbcl-0.9.16:
  * bug fix: two potential GC deadlocks affecting threaded builds.
  * bug fix: (TYPEP #\A '(NOT (MEMBER #\" #\{ #\:))) now correctly
    returns T (reported by Anton Kazennikov)
  * bug fix: the STORE-VALUE restart of CHECK-TYPE works correctly
    with non-variable places

changes in sbcl-0.9.17 (0.9.99?) relative to sbcl-0.9.16:
  * feature: weak hash tables, see MAKE-HASH-TABLE documentation
  * incompatible change: External-format support for FFI calls.  The
    SB-ALIEN:C-STRING no longer implies an ASCII
    external-format. Instead the string is subject to external-format
    conversion. Additionally return values of type SB-ALIEN:C-STRING
    are by default of type (SIMPLE-ARRAY CHARACTER), not
    SIMPLE-BASE-STRING. For an alien type that behaves like the old
    SB-ALIEN:C-STRING type, use (SB-ALIEN:C-STRING :EXTERNAL-FORMAT
    :ASCII :ELEMENT-TYPE BASE-CHAR).  (thanks to Yaroslav Kavenchuk)
  * incompatible change: SB-EXT package no longer contains the
    following unused symbols: *GC-NOTIFY-AFTER*, *GC-NOTIFY-BEFORE*,
    *GC-NOTIFY-STREAM*, *ERROR-PRINT-LENGTH*, *ERROR-PRINT-LEVEL*,
    *ERROR-PRINT-LINES*
  * incompatible change: the single-stepper is no longer available 
    on Alpha, Mips and Sparc platforms.
  * minor incompatible change: the direct superclasses of
    SB-MOP:FUNCALLABLE-STANDARD-OBJECT are (FUNCTION STANDARD-OBJECT),
    not (STANDARD-OBJECT FUNCTION).  This makes the
    class-precedence-lists of GENERIC-FUNCTION and
    STANDARD-GENERIC-FUNCTION comply with the requirement of ANSI
    1.4.4.5.
  * minor incompatible change: the default stream external format on
    non-unicode SBCL is no longer detected from the locale, but is always
    ISO-8859-1
  * new feature: Add a version of evaluator that uses an interpreter instead
    of the compiler. EVAL still uses the compiler by default, to switch it